# Mr.Logger

./: .gitignore  README.md  benchmark_automation.py  benchmark_runner.py  cloud_deploy.sh  meson.build  meson_options.txt  requirements.txt
Benchmarks/: BenchmarkDefault.cpp  BenchmarkDefaultMultithread.cpp  BenchmarkLarge.cpp  BenchmarkLargeMultithread.cpp  BenchmarkSmall.cpp  BenchmarkSmallMultithread.cpp  BenchmarkSpdlog.cpp  BenchmarkSpdlogMultithread.cpp  meson.build
Benchmarks/Util/: BenchmarkConfigs.hpp  BenchmarkUtils.cpp  BenchmarkUtils.hpp  SpdlogBenchmarkConfigs.hpp  SpdlogBenchmarkUtils.cpp  SpdlogBenchmarkUtils.hpp  meson.build
Benchmarks/include/: BenchConfigs.hpp  Benchmark.hpp
Benchmarks/src/: Benchmark.cpp  BenchmarkDefault.cpp  BenchmarkDefaultMultiThreaded.cpp  BenchmarkFixedDefault.cpp  BenchmarkFixedDefaultMultiThreaded.cpp  BenchmarkFixedLarge.cpp  BenchmarkFixedSmall.cpp  BenchmarkLarge.cpp  BenchmarkNoBatch.cpp  BenchmarkSmall.cpp  BenchmarkSpdlog.cpp  BenchmarkSpdlogMultiThreaded.cpp  CircularDefault.cpp  CircularDefaultMultiThreaded.cpp  Default.cpp  DefaultMultiThreaded.cpp  FixedDefault.cpp  FixedDefaultMultiThreaded.cpp  Large.cpp  NoBatch.cpp  Small.cpp  Spdlog.cpp  SpdlogMultiThreaded.cpp
include/MR/Coroutine/: WriteTask.hpp
include/MR/IO/: FileRotater.hpp  IOUring.hpp  WriteOnlyFile.hpp  WritePreparer.hpp
include/MR/Interface/: ThreadSafeQueue.hpp
include/MR/Logger/: BufferPool.hpp  Config.hpp  Logger.hpp  SeverityLevel.hpp  WriteRequest.hpp
include/MR/Memory/: Buffer.hpp  BufferPool.hpp  Pool.hpp
include/MR/Queue/: CircularQueue.hpp  FixedSizeBlockingQueue.hpp  StdQueue.hpp
src/: main.cpp  meson.build
src/IO/: FileRotater.cpp  meson.build
src/IO/IOUring/: IOUring.cpp
src/Logger/: BufferPool.cpp  Logger.cpp  meson.build
src/Memory/: BufferPool.cpp  Pool.cpp  meson.build
src/Queue/: StdQueue.cpp  meson.build
test/: meson.build
test/Integration/: LoggerIntegrationTest.cpp
test/Unit/: BufferPoolTest.cpp  FileRotaterTest.cpp  FixedSizeBlockingQueueTest.cpp  LoggerConfigTest.cpp  StdQueueTest.cpp
